# redis_keyspace_amqp

./: .gitignore  CMakeLists.txt  README.md  amqp_connection.c  amqp_connection.h  library.c  library.h  try.sh  utils.c  utils.h
build_debug/: CMakeCache.txt  Makefile  cmake_install.cmake  redis_keyspace_amqp.cbp
build_release/: CMakeCache.txt  Makefile  cmake_install.cmake  redis_keyspace_amqp.cbp
debug_redis_cluster/: recreate_cluster.sh  start_cluster.sh
debug_redis_cluster/7001/: redis.conf
debug_redis_cluster/7002/: redis.conf
debug_redis_cluster/7003/: redis.conf
debug_redis_cluster/7004/: redis.conf
debug_redis_cluster/7005/: redis.conf
debug_redis_cluster/7006/: redis.conf
rkea_docker/: docker-compose.yml
rkea_docker/redis/: Dockerfile  ssh_host_rsa_key  ssh_host_rsa_key.pub  sshd_config
